# Veclite_backend

./: .gitignore  DEPLOYMENT_READY.md  README.md  STORAGE_SETUP.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt  server.py  server_v2.py  smoke_test.py
benchmarks/: __init__.py  eval_harness.py  generate_final_report.py  load_test_concurrent_finalize.py  production_readiness_test.py  qdrant_runner.py  run_all.py  suite_a_beir.py  suite_b_conversational.py  suite_c_forever_memory.py  test_concurrency_throughput.py  test_fraud_finance.py  test_online_mutation.py  utils_metrics.py  utils_report.py
scripts/: beir_eval.py  beir_eval_simple.py  comprehensive_comparison.py  large_scale_test.py  load_test.py  run_all_evaluations.py  smoke_http.py
src/mcn/: __init__.py  cluster.py  config.py  mcn_layer.py  search.py  snapshot_manager.py  store.py
tests/: bench_5k_realistic.py  invariants_test.py  test_rate_limits.py  test_realworld_smoke.py  test_snapshot_swap.py
tests/data/: semantic_100k_intent_names.txt  semantic_100k_sentences.txt
