[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcn"
version = "0.0.1"
description = "Memory Compression Networks: learned retention/forgetting for long-term AI memory"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Hetul Patel"}]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "faiss-cpu",
  "sentence-transformers",
  "matplotlib"
]

[project.urls]
Homepage = "https://example.com"
